# AgentDataBench

./: .gitignore  pyproject.toml
artifacts/benchmark_package/001_customer_migration/: metadata.yaml  task.yaml
artifacts/benchmark_package/001_customer_migration_basic_explicit_clean/: metadata.yaml  scenario.yaml
artifacts/benchmark_package/002_customer_migration_basic_underspecified_clean/: metadata.yaml  scenario.yaml  task.yaml
artifacts/benchmark_package/002_material_master_migration/: metadata.yaml  scenario.yaml  task.yaml
artifacts/benchmark_package/003_supplier_migration/: metadata.yaml  scenario.yaml  synthesis_configuration.yaml
artifacts/benchmark_package/004_supplier_migration/: metadata.yaml  noise_configuration.yaml  task.yaml
artifacts/benchmark_package/005_material_master_migration/: metadata.yaml  task.yaml
artifacts/benchmark_package/005_supplier_migration_basic_explicit/: metadata.yaml  noise_configuration.yaml  task.yaml
artifacts/benchmark_package/006_customer_migration/: metadata.yaml  noise_configuration.yaml  task.yaml
artifacts/benchmark_package/009_material_master_migration_basic_explicit/: metadata.yaml
artifacts/benchmark_package/097_customer_migration/: metadata.yaml  scenario.yaml  task.yaml
artifacts/benchmark_package/098_material_master_migration/: metadata.yaml  scenario.yaml  synthesis_configuration.yaml
artifacts/benchmark_package/099_supplier_migration/: metadata.yaml  scenario.yaml
artifacts/manual_tests/: package_execution.md
scripts/di_smoke_test/: README.md  prepare.py  report.py  run.py  score.py
src/agentdatabench/: __init__.py
src/migratebench/: __init__.py
tests/: conftest.py  test_dataset_creator_pkg3_supplier.py  test_ground_truth_pkg3_supplier.py  test_ground_truth_regression.py  test_noise_engine_pkg3_supplier.py  test_smoke_load_fixtures.py
tests/domain/: test_benchmark_package.py  test_dataset.py  test_evaluation_result.py  test_metadata.py  test_noise_configuration.py  test_scenario.py  test_schema.py  test_synthesis_configuration.py  test_task.py
tests/evaluation/: test_ag2_adapter.py  test_agent_adapter.py  test_data_interpreter_adapter.py  test_direct_llm_adapter.py  test_error_correction_accuracy.py  test_metrics.py  test_report_generator.py  test_reproducibility.py  test_runner.py
tests/generator/: test_dataset_creator.py  test_filtering.py  test_ground_truth_creator.py  test_noise_engine.py  test_noise_models.py  test_package_builder.py  test_synthesis_strategies.py  test_transformations.py  test_validator.py
tmp/db/: chroma.sqlite3
(+75 files in other folders)
