[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agentdatabench"
version = "0.1.0"
description = "Framework for creating and evaluating reproducible data migration/integration benchmarks for agent-based systems."
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.6",
    "PyYAML>=6.0",
    "pandas>=2.2",
    "Faker>=40.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
# metagpt only supports Python <3.12 as of this writing, incompatible with
# this project's own >=3.12 requirement - install into a separate Python
# <=3.11 environment to actually run DataInterpreterAdapter live.
data-interpreter = ["metagpt"]

[tool.setuptools.packages.find]
where = ["src"]
