[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agentdatabench"
version = "0.1.0"
description = "Framework for creating and evaluating reproducible data migration/integration benchmarks for agent-based systems."
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.6",
    "PyYAML>=6.0",
    "pandas>=2.2",
    "Faker>=40.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
# metagpt only supports Python <3.12 as of this writing, incompatible with
# this project's own >=3.12 requirement - install into a separate Python
# <=3.11 environment to actually run DataInterpreterAdapter live.
data-interpreter = ["metagpt"]
# ag2 (formerly AutoGen) is mid-rewrite toward a v1.0 that removes
# ConversableAgent/RetrieveUserProxyAgent and the `autogen` import name
# entirely - pinned to the last stable release built on that API.
ag2 = ["ag2[openai,retrievechat]==0.14.0"]
# DirectLLMAdapter: a raw LLM call plus PDF text extraction, no agent
# framework - lightweight, no version-pinning concerns like the two above.
direct-llm = ["openai>=1.0", "pypdf>=4.0"]

[tool.setuptools.packages.find]
where = ["src"]
